--- a/solveit/src/App.css
+++ b/solveit/src/App.css
@@ -15,13 +15,15 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  float: none;
+  margins: auto;
+  margin-left: 15%;
+  margin-right: 15%;
+  max-width: 140vh;
+  text-align: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 10px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .App-link {
